Wrap long text on the SunriseStep component and remove the preventWidows call, so that the design looks better

--- a/app/components/ui/sunrise-step/styles.scss
+++ b/app/components/ui/sunrise-step/styles.scss
@@ -3,4 +3,8 @@
 .sunrise-step {
 	font-size: 1.4rem;
 	font-weight: 300;
+
+	p {
+		word-wrap: break-word;
+	}
 }
